fix assistant divder too short

--- a/public/index.scss
+++ b/public/index.scss
@@ -5,6 +5,8 @@
 
 .llm-chat-header-icon-wrapper {
   margin: 0 8px;
+  height: 48px;
+  padding-top: 8px;
 
   .euiFormControlLayout__prepend {
     background-color: transparent !important;
